--- a/src/pages/registration.pug
+++ b/src/pages/registration.pug
@@ -16,7 +16,8 @@ block main
                     a(href="registration.html").auth-tab.active  Регистрация
                 .registration__form
                     form
-                        input(type="email" placeholder="E-mail*").input.input--white
+                        .input-wrapper
+                            input(type="email" placeholder="E-mail*").input.input--white
                         .input-password
                             input(type="password" placeholder="Введите пароль*").input.input--white
                             .input-password__hidden.input-password__state
