--- a/src/pages/authorization.pug
+++ b/src/pages/authorization.pug
@@ -16,7 +16,8 @@ block main
                     a(href="registration.html").auth-tab Регистрация
                 .authorization__form
                     form
-                        input(type="email" placeholder="E-mail*").input.input--white
+                        .input-wrapper
+                            input(type="email" placeholder="E-mail*").input.input--white
                         .input-password
                             input(type="password" placeholder="Пароль*").input.input--white
                             .input-password__hidden.input-password__state
