--- a/src/components/_counter.pug
+++ b/src/components/_counter.pug
@@ -1,5 +1,5 @@
 mixin counter(type)
     .counter(class= `counter--${type}`)
         .minus.counter__action
-        input(type="number" value="0" readonly).counter__input
+        input(type="number" value="1").counter__input
         .plus.counter__action
