--- a/src/pages/cart.pug
+++ b/src/pages/cart.pug
@@ -19,17 +19,18 @@ block main
                         .cart__items-main
                             include ../components/_cart-item
                             include ../components/_cart-item
-                    .cart__details
-                        .cart__details-amount
-                            .cart__details-amount-title Итого
-                            .cart__details-amount-value 100 000 ₽
-                        .cart__details-count
-                            .cart__details-count-title Кол-во товаров
-                            .cart__details-count-value 2
-                        .cart__details-discount
-                            .cart__details-discount-title Общая скидка
-                            .cart__details-discount-value 100 000 ₽
-                        .cart__details-buttons
-                            a(href="order.html").btn.btn--brand Перейти к оформлению
-                            a(href="catalog.html").btn.btn--black Продолжить покупки
+                    .cart__details-wrapper
+                        .cart__details
+                            .cart__details-amount
+                                .cart__details-amount-title Итого
+                                .cart__details-amount-value 100 000 ₽
+                            .cart__details-count
+                                .cart__details-count-title Кол-во товаров
+                                .cart__details-count-value 2
+                            .cart__details-discount
+                                .cart__details-discount-title Общая скидка
+                                .cart__details-discount-value 100 000 ₽
+                            .cart__details-buttons
+                                a(href="order.html").btn.btn--brand Перейти к оформлению
+                                a(href="catalog.html").btn.btn--black Продолжить покупки
 
