--- a/src/pages/order.pug
+++ b/src/pages/order.pug
@@ -157,7 +157,7 @@ block main
                                     .input-wrapper
                                         input(type="text" placeholder="Email*" required).input.input--gray
                                     .input-wrapper
-                                        input(type="text" placeholder="Телефон" data-phone-number required).input.input--gray
+                                        input(type="tel" placeholder="Телефон" data-phone-number required).input.input--gray
                                     .input-wrapper
                                         input(type="text" placeholder="Адрес*" required).input.input--gray
                                 textarea(placeholder="Комментарий к заказу").input.input--gray
