--- a/src/components/sections/_section-feedback.pug
+++ b/src/components/sections/_section-feedback.pug
@@ -7,7 +7,7 @@ section.section-feedback
                     .input-wrapper
                         input(type="text" placeholder="Имя*" required).input.input--white
                     .input-wrapper
-                        input(type="text" placeholder="Телефон*" required data-phone-number).input.input--white
+                        input(type="tel" placeholder="Телефон*" required data-phone-number).input.input--white
                     button.btn.btn--brand Отправить
                 p.
                     Нажимая на кнопку “Отправить”, вы соглашаетесь на обработку персональных данных и подтверждаете, что ознакомлены с <a href="javascript:void(0)">политикой конфиденциальности</a>
