--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -131,8 +131,8 @@ li {
 /////////////////////
 
 /* Убираем стрелки в Chrome, Safari, Edge, Opera */
-.range-values input::-webkit-outer-spin-button,
-.range-values input::-webkit-inner-spin-button {
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
   margin: 0;
   -webkit-appearance: none;
 }
