--- a/src/styles/components/popups.scss
+++ b/src/styles/components/popups.scss
@@ -78,6 +78,10 @@
   will-change: unset;
 }
 
+//root: {
+//  --fancybox-bg: var(--color-black);
+//}
+
 .popup-close-btn {
   width: 40px;
   height: 40px;
@@ -171,6 +175,3 @@
   }
 }
 
-* {
-  --fancybox-bg: var(--color-black);
-}
